9246
Reproduction with the resident compiler:

{code}
% scalac sandbox/test.scala
% scalac -Xresident

nsc> sandbox/test2.scala

nsc> sandbox/test2.scala
sandbox/test2.scala:2: error: type mismatch;
 found   : p.X.type
 required: AnyRef
Note that X extends Any, not AnyRef.
Such types can participate in value classes, but instances
cannot appear in singleton types or in reference comparisons.
  private[this] val res1 = (null: p.X.type)
                                    ^
{code}
